sounk fyrir bakgrunn komið

--- a/client/index.html
+++ b/client/index.html
@@ -113,6 +113,8 @@
        in a seperate obj to be further used more efficiently */
     let g_tilesContainingPlayers = {};
     // for debbugs
+    // Background sound 
+    var backgroundMusic = new Audio('./client/audios/background.mp3');
   </script>
   
   <!-- include all client game logic such as drawing the map waiting looby etc -->
