refactorað main í tileDrawer.js

--- a/client/index.html
+++ b/client/index.html
@@ -138,7 +138,7 @@
   <script type="text/javascript" src="./client/js/update.js" defer></script>
 
   <script type="text/javascript" src="./client/js/g_main.js" defer></script>
-  <script type="text/javascript" src="./client/js/main.js" defer></script>
+  <script type="text/javascript" src="./client/js/tileDrawer.js" defer></script>
  
   <!-- Combine all the game logic into a client side game -->
   <script>
